--- a/dantalaya/specialization/index.html
+++ b/dantalaya/specialization/index.html
@@ -49,7 +49,7 @@
                 </button>
                 <a class="navbar-brand" href="../">
                     <div class="dimg">
-                        <img src="../images/logo.jpg" alt="Logo" />
+                        <img src="../images/logo.png" alt="Logo" />
                     </div>
                 </a>
             </div>
@@ -58,7 +58,7 @@
                 <ul class="nav navbar-nav dnav">
                    <li class="dlogo">
                    <a class="navbar-brand" href="../">
-                    <div class="dimg"><img src="../images/logo.jpg" alt="Logo" /></div>
+                    <div class="dimg"><img src="../images/logo.png" alt="Logo" /></div>
                    </a></li> 
                     <li class="dlifirst"><a href="../">Home</a></li>
                     <li><a href="../about/">About Us</a></li>
