--- a/dantalaya/index.html
+++ b/dantalaya/index.html
@@ -54,7 +54,7 @@
                 </button>
                 <a class="navbar-brand" href="#">
                     <div class="dimg">
-                        <img src="images/logo.jpg" alt="Logo" />
+                        <img src="images/logo.png" alt="Logo" />
                     </div>
                 </a>
             </div>
@@ -63,7 +63,7 @@
                 <ul class="nav navbar-nav dnav">
                    <li class="dlogo">
                    <a class="navbar-brand">
-                    <div class="dimg"><img src="images/logo.jpg" alt="Logo" /></div>
+                    <div class="dimg"><img src="images/logo.png" alt="Logo" /></div>
                    </a></li> 
                     <li class="dlifirst"><a href="#" class="current">Home</a></li>
                     <li><a href="about/">About Us</a></li>
