--- a/dantalaya/about/index.html
+++ b/dantalaya/about/index.html
@@ -101,6 +101,12 @@ The treatment is not restricted to Indian citizens alone but people from any nat
 Dantalaya aims to take dental health services in the country to a all-new level by making  Dental treatment procedures affordable all over the country.
 Rural and urban practitioners will practice dentistry in the same level.
 </p>
+                    <p>
+                        The biggest network of Dental Practitioners in India. For the first time, Dental Surgeons across the country will come together to address the Nation's dental problems. Dental health issues will now be taken care at a nearest clinic with great care and very AFFORDABLE price. </p>
+                    <p>
+                        Dental treatment is not expensive, neglecting Dental health is. Dantalaya introduces flexible payment options for every Dental procedure to take care of your treatment. Payments through online transfer, cheque, EMI and swiping your Debit/credit card for Dental treatment is now a reality. </p>
+                    <p>
+                        Whether you are 8 or 80, Dental health needs special care. Dantalaya offers unique packages for children and the elderly. For the first time in the country, Dantalaya offers, treatment for foreign nationals and NRIs at very AFFORDABLE prices. </p>
 
                     <p class="dabtpad">
                         Dantalaya has something for everyone: For oral-health friendly Treatments, To Find a Dentist in Nearby Location, Treatment at Affordable price With EMI options, Review oral health history . Dantalaya now to brush up on your oral health and prepared to meet Dental Practitioners from various specialties with lots of experience in clinical practice!</p>
