--- a/dantalaya/about/index.html
+++ b/dantalaya/about/index.html
@@ -92,24 +92,24 @@
             <div class="row">
                 <div class="col-md-12 dabt">
 
-<p>Dantalaya or “Danta-chikitsalaya” is a  platform exclusively for practicing dental surgeons in India.
-It promises to produce smiles for the entire population of the country by bringing together dental surgeons across India.</p>
-<p>For the first time in India, dental practitioners all over the country will come together to provide dental treatment and counselling for every individual of the country.</p>
+<p>Dantalaya or “Danta-chikitsalaya” is a  platform exclusively for practicing Dental surgeons in India.
+It promises to produce smiles for the entire population of the country by bringing together Dental surgeons across India.</p>
+<p>For the first time in India, practitioners all over the country will come together on single platform.</p>
 <p>
-The treatment is not restricted to Indian citizens alone but people from any nationality can avail Dental treatment and advice while in the country.</p>
+The treatment is not restricted to Indian citizens alone but people from any <mark> <b> <font color="Red"> Nationality </font> </mark></b> can avail Dental treatment and advice while in the country.</p>
 <p>
-Dantalaya aims to take dental health services in the country to a all-new level by making  Dental treatment procedures affordable all over the country.
+Dantalaya aims to take Dental health services in the country to a all-new level by making  Dental treatment procedures affordable all over the country.
 Rural and urban practitioners will practice dentistry in the same level.
 </p>
                     <p>
-                        The biggest network of Dental Practitioners in India. For the first time, Dental Surgeons across the country will come together to address the Nation's dental problems. Dental health issues will now be taken care at a nearest clinic with great care and very AFFORDABLE price. </p>
+                        The biggest network of Dental Practitioners in India. For the first time, Dental Surgeons across the country will come together to address the Nation's Dental problems. Dental health issues will now be taken care at a nearest clinic with great care and very <mark> <b> <font color="Red"> AFFORDABLE price. </font> </mark></b>  </p>
                     <p>
                         Dental treatment is not expensive, neglecting Dental health is. Dantalaya introduces flexible payment options for every Dental procedure to take care of your treatment. Payments through online transfer, cheque, EMI and swiping your Debit/credit card for Dental treatment is now a reality. </p>
                     <p>
                         Whether you are 8 or 80, Dental health needs special care. Dantalaya offers unique packages for children and the elderly. For the first time in the country, Dantalaya offers, treatment for foreign nationals and NRIs at very AFFORDABLE prices. </p>
 
                     <p class="dabtpad">
-                        Dantalaya has something for everyone: For oral-health friendly Treatments, To Find a Dentist in Nearby Location, Treatment at Affordable price With EMI options, Review oral health history . Dantalaya now to brush up on your oral health and prepared to meet Dental Practitioners from various specialties with lots of experience in clinical practice!</p>
+                        Dantalaya has something for everyone: Oral health treatment,locating dentist,affording treatment with EMI options.</p>
 
 
 
@@ -124,7 +124,13 @@ Rural and urban practitioners will practice dentistry in the same level.
                     <h2>Our Mission in Oral Health Care</h2>
 
                     <p class="dabtpad">
-                        The Mission is to improve patients lives by reducing the harm caused by oral diseases-many of which are entirely preventable and providing Treatment at affordable price. Great oral health is an essential part of a healthy lifestyle. Our individual dental EMI plans can help you maximize your oral health without worrying about any painful procedures &amp; Treatment Cost.
+                    <center>
+                    
+                    Our Mission in Danatalaya is to achieve a zero patient-rejection rate!
+                    
+                    </center>
+
+                        <!-- The Mission is to improve patients lives by reducing the harm caused by oral diseases-many of which are entirely preventable and providing Treatment at affordable prices. Great oral health is an essential part of a healthy lifestyle. Our individual Dental EMI plans can help you maximize your oral health without worrying about any painful procedures &amp; Treatment Cost. -->
                     </p>
 
 
