--- a/dantalaya/index.html
+++ b/dantalaya/index.html
@@ -114,18 +114,18 @@
             <div class="row">
                 <div class="col-md-7 dwel">
 
-                    <h1>WELCOME TO DANTALAYA DENTISTRY</h1>
+                    <h1>WELCOME TO DANTALAYA</h1>
                     <p>
-                        The biggest network of Dental Practitioners in India. For the first time, Dental Surgeons across the country will come together to address the Nation's dental problems. Dental health issues will now be taken care at a nearest clinic with great care and very AFFORDABLE price. </p>
+                        The biggest network of Dental Practitioners in India. For the first time, Dental Surgeons across the country will come together to address the Nation's Dental problems. Dental Health issues will now be taken care at a nearest clinic with great care at very AFFORDABLE price. </p>
                     <p>
-                        Dental treatment is not expensive, neglecting Dental health is. Dantalaya introduces flexible payment options for every Dental procedure to take care of your treatment. Payments through online transfer, cheque, EMI and swiping your Debit/credit card for Dental treatment is now a reality. </p>
+                        Dental treatment is not expensive, neglecting Dental Health is. Dantalaya introduces <mark> <font color="#FF5733">flexible payment options  </font> </mark> for every Dental procedure to take care of your treatment. Payments through <mark> <font color="#FF5733"> Online Transfer, Cheque, EMI and Swiping your Debit/Credit Card  </font> </mark> for Dental treatment is now a reality. </p>
                     <p>
-                        Whether you are 8 or 80, Dental health needs special care. Dantalaya offers unique packages for children and the elderly. For the first time in the country, Dantalaya offers, treatment for foreign nationals and NRIs at very AFFORDABLE prices. </p>
+                        Whether you are 8 or 80, Dental Health needs special care. Dantalaya offers unique packages for <mark> <font color="#FF5733">  children </font> </mark> and the     <mark> <font color="#FF5733"> elderly </font> </mark>. For the first time in the country, Dantalaya offers, treatment for <mark><font color="#FF5733"> foreign nationals </font></mark> and <mark><font color="#FF5733"> NRIs </font></mark> at very AFFORDABLE prices. </p>
 
 <!--
 
                     <p>
-                        Dantalaya has something for everyone: For oral-health friendly Treatments, To Find a Dentist in Nearby Location, Treatment at Affordable price With EMI options, Review oral health history . Dantalaya now to brush up on your oral health and prepared to meet Dental Practitioners from various specialties with lots of experience in clinical practice!
+                        Dantalaya has something for everyone: For oral-Health friendly Treatments, To Find a Dentist in Nearby Location, Treatment at Affordable price With EMI options, Review oral Health history . Dantalaya now to brush up on your oral Health and prepared to meet Dental Practitioners from various specialties with lots of experience in clinical practice!
                     </p>
 -->
                     <a href="about/">
