--- a/dantalaya/services/dentist/index.html
+++ b/dantalaya/services/dentist/index.html
@@ -106,22 +106,21 @@ different for each category.  </p>
 <p>
 Dantalaya promises to provide patients to your clinic who have been briefed about treatment costs for various 
 procedures. Patients from different States and various backgrounds have registered throughout the country. The entire 
-country needs to know the importance of Oral hygiene and will consult you for more information and treat. </p>
+country needs to know the importance of Oral hygiene</p>
 <p>
 One single platform for your clinical practice.  Attract patients like never before. Freedom from nagging patients. 
 Patients postponing treatment will be a thing of the past. Attract patients from all over the Globe (first time in the 
 country). Providing attractive Dental packages for Geriatric patients. Treatment costs for Foreigners and NRIs will be 
 different from others. Introducing full-mouth rehabilitation program for the first time. Upgrade your  practice  and 
 maintain patient records at the click of a button. Enjoy practice like never before .  Buy Dental products at the click of 
-a button. Find a Dental technician without any worries. Pay taxes at the click of a button. Time to organize your clinical 
-practice like never before. </p>
+a button. Find a Dental technician without any worries.</p>
 <p>
 Patients complaints If any, will be the Dental Surgeon's responsibility and Dantalaya in anyway does not interfere in 
 treatment related issues. Be a part of the best network of Dentists across the globe. It's time to make Dentistry smile!
 
  </p>   
                
-               <a href="../doctorregister/"><div class="btn btn-block dbtn dbtn1">Register as dentist now</div></a>
+               
                 </div>
             </div>
         </div>
