--- a/dantalaya/services/index.html
+++ b/dantalaya/services/index.html
@@ -10,6 +10,8 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
     <link href="../css/font-awesome.min.css" rel="stylesheet">
+        <link href="../css/hover.css" rel="stylesheet">
+
 
  <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
  
@@ -80,20 +82,21 @@
        
         <section>
         <div class="container-fluid">
+        
             <div class="row">
                 <div class="col-md-6 dserv">
-                <a href="../services/patient/"><img src="../images/pat.jpg" alt=""></a>
+                <a href="../services/patient/"><img src="../images/patient.png" alt=""></a>
                 </div>
                 <div class="col-md-6 dserv">
-                <a href="../services/dentist/"><img src="../images/dent.jpg" alt=""></a>
+                <a href="../services/dentist/"><img src="../images/dentist.png" alt=""></a>
                 </div>
             </div>
                <div class="row">
                 <div class="col-md-6 dserv">
-                <a href="../services/surgeon/"><img src="../images/hs.jpg" alt=""></a>
+                <a href="../services/surgeon/"><img src="../images/housesurgeon.png" alt=""></a>
                 </div>
                 <div class="col-md-6 dserv">
-                <a href="../services/labtechnician/"><img src="../images/ls.jpg" alt=""></a>
+                <a href="../services/labtechnician/"><img src="../images/labtechnician.png" alt=""></a>
                 </div></div>
             </div>
           </div>
