--- a/dantalaya/services/labtechnician/index.html
+++ b/dantalaya/services/labtechnician/index.html
@@ -94,8 +94,8 @@
 <p>
     <ul class="dserli">
         <li>Unique opportunity for Dental labs all over India to improve practice.</li>
-        <li>Reach out to more Doctors with help of us</li>
-        <li>Receive orders everyday and Meet new Doctors at your convenient time</li>
+        <li>Reach out to more Doctors with Dantalaya.</li>
+        <li>Receive orders everyday and Meet new Doctors at your convenient time.</li>
         <li>Easy payment options for the first time in India.</li>
     </ul>
   </p>   
