--- a/dantalaya/services/surgeon/index.html
+++ b/dantalaya/services/surgeon/index.html
@@ -98,9 +98,9 @@
         <li>Learn the art of Dentistry from senior Doctors.</li>
         <li>Increase your knowledge about private practice.</li>
         <li>Expose yourself to multiple cases with hands-on training.</li>
-        <li>Empower yourself with dierent skills.</li>
+        <li>Empower yourself with different skills.</li>
         <li>Be ready to start your own practice.</li>
-        <li>Time to serve the community starts early.</li>
+        <li>Time to make community smile.</li>
     </ul>
   </p>   
                
