--- a/dantalaya/services/surgeon/index.html
+++ b/dantalaya/services/surgeon/index.html
@@ -104,7 +104,7 @@
     </ul>
   </p>   
                
-               <a href="../surgeonregister/"><div class="btn btn-block dbtn dbtn1">Register as a House Surgeon now</div></a>
+               <a href="../../surgeonregister/"><div class="btn btn-block dbtn dbtn1">Register as a House Surgeon now</div></a>
                 </div>
             </div>
         </div>
