--- a/dantalaya/about/index.html
+++ b/dantalaya/about/index.html
@@ -91,28 +91,18 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12 dabt">
-
-<p>Dantalaya or “Danta-chikitsalaya” is a  platform exclusively for practicing Dental surgeons in India.
-It promises to produce smiles for the entire population of the country by bringing together Dental surgeons across India.</p>
-<p>For the first time in India, practitioners all over the country will come together on single platform.</p>
-<p>
-The treatment is not restricted to Indian citizens alone but people from any <mark> <b> <font color="Red"> Nationality </font> </mark></b> can avail Dental treatment and advice while in the country.</p>
-<p>
-Dantalaya aims to take Dental health services in the country to a all-new level by making  Dental treatment procedures affordable all over the country.
-Rural and urban practitioners will practice dentistry in the same level.
-</p>
-                    <p>
-                        The biggest network of Dental Practitioners in India. For the first time, Dental Surgeons across the country will come together to address the Nation's Dental problems. Dental health issues will now be taken care at a nearest clinic with great care and very <mark> <b> <font color="Red"> AFFORDABLE price. </font> </mark></b>  </p>
-                    <p>
-                        Dental treatment is not expensive, neglecting Dental health is. Dantalaya introduces flexible payment options for every Dental procedure to take care of your treatment. Payments through online transfer, cheque, EMI and swiping your Debit/credit card for Dental treatment is now a reality. </p>
-                    <p>
-                        Whether you are 8 or 80, Dental health needs special care. Dantalaya offers unique packages for children and the elderly. For the first time in the country, Dantalaya offers, treatment for foreign nationals and NRIs at very AFFORDABLE prices. </p>
-
-                    <p class="dabtpad">
-                        Dantalaya has something for everyone: Oral health treatment,locating dentist,affording treatment with EMI options.</p>
+                <ul class="dserlileft">
+                <li>Dantalaya or "Danta-chikitsalaya" is a platform <b>exclusively</b> for Dental Practitioners. </li>
+                <li>Dantalaya is an <b>online platform</b> that enables the general public to find solutions to their Dental problems </li>
+                <li> At Dantalaya you can meet your <b>Family Dentist</b> and avail unbelievable Dental Services at very affordable prices!</li>
+                <li>The <b>largest network</b> of Dentists will now guide you and your entire family so that you don't have to fear the treatment procedures or the expenditure.</li>
+                <li> At Dantalaya we make sure <b>no one postpones</b> the treatment!</li>
+                <li>Dental surgeons in <b>rural and urban</b> areas will work together to make Dental treatment <b>accessible</b> to everyone in the country!.</li>
+                <li> Dantalaya offers attractive packages to the <b>families of armed personal, central government employees, state government employees and employees from small scale businesses.</b></li>
+                <li> For the first time in the country <b>Foreigners and NRIs</b> will avail Dental treatment from experienced Doctors at never before prices!</li>
 
 
-
+                </ul>
                 </div>
             </div>
         </div>
@@ -121,12 +111,12 @@ Rural and urban practitioners will practice dentistry in the same level.
             <div class="row">
                 <div class="col-md-12 dabt">
 
-                    <h2>Our Mission in Oral Health Care</h2>
+                    <h2> TREATMENT FIRST PAYMENT LATER</h2>
 
                     <p class="dabtpad">
                     <center>
                     
-                    Our Mission in Danatalaya is to achieve a zero patient-rejection rate!
+                     Payment methods made easy: <b>credit/debit card, online transfer, cheques and EMIs.</b> 
                     
                     </center>
 
