--- a/dantalaya/index.html
+++ b/dantalaya/index.html
@@ -114,13 +114,22 @@
             <div class="row">
                 <div class="col-md-7 dwel">
 
-                    <h1>WELCOME TO DANTALAYA</h1>
+                    <h1>WELCOME TO <b>DANTALAYA</b></h1>
                     <p>
-                        The biggest network of Dental Practitioners in India. For the first time, Dental Surgeons across the country will come together to address the Nation's Dental problems. Dental Health issues will now be taken care at a nearest clinic with great care at very AFFORDABLE price. </p>
+                        The <b>world's largest network of Dental Practitioners!</b> For the <b>first time</b> in India, Dental Surgeons will come together to address the nation's Dental problems.</p>
                     <p>
-                        Dental treatment is not expensive, neglecting Dental Health is. Dantalaya introduces <mark> <font color="#FF5733">flexible payment options  </font> </mark> for every Dental procedure to take care of your treatment. Payments through <mark> <font color="#FF5733"> Online Transfer, Cheque, EMI and Swiping your Debit/Credit Card  </font> </mark> for Dental treatment is now a reality. </p>
+                        Dantalaya offers a plethora of services so that no one <b>postpones or ignores</b> Dental treatment! All services at the click of a button!  </p>
+                        <li><b>Locate</b> a Dentist close to your <b>home/office.</b></li>
+                        <li>Fix Dental <b>appointments</b> at <b>your convenience!</b></li>
+                        <li>Treatment provided <b>anywhere in India!</b></li>
+                        <li>Avail complete <b>Oral assessment</b> in the <b>first</b> appointment!</li>
+                        <li>Treatment <b>prices</b> made very <b>affordable!</b></li>
+                        <li>Uniform prices throughout the country!</li>
+                        <li>Flexible payment options: <b>credit/debit card, online transfer, cheques, EMI facility.</b> </li>
+                        <li>Treatment for <b>Foreigners and NRIs</b> at very affordable prices!</li>
+                        <li>Unique packages for children and the <b>elderly!</b></li></br>
                     <p>
-                        Whether you are 8 or 80, Dental Health needs special care. Dantalaya offers unique packages for <mark> <font color="#FF5733">  children </font> </mark> and the     <mark> <font color="#FF5733"> elderly </font> </mark>. For the first time in the country, Dantalaya offers, treatment for <mark><font color="#FF5733"> foreign nationals </font></mark> and <mark><font color="#FF5733"> NRIs </font></mark> at very AFFORDABLE prices. </p>
+                         DANTALAYA AIMS TO PROVIDE TREATMENT TO EVERY INDIVIDUAL IN THE COUNTRY WITHOUT WORRYING ABOUT THE COSTS! </p>
 
 <!--
 
