--- a/dantalaya/services/dentist/index.html
+++ b/dantalaya/services/dentist/index.html
@@ -91,7 +91,7 @@
 <!--            <img src="../images/patient.jpg" alt="services">-->
             </div>
             
-            <ul class="dserlileft">
+            <ul class="dserpad">
                <li>Dantalaya is an online platform catering exclusively to the the largest network of Dental Practitioners in India!</li>
                <li>Doctors from rural and <b>urban </b> areas have come together for the first time in the country to provide Dental Care to the general public. </li>
                <li> <b>90% </b> of the population requires treatment and this cannot be achieved with one Dentist. </li>
