--- a/dantalaya/user-profiles/patient/dashboard/index.html
+++ b/dantalaya/user-profiles/patient/dashboard/index.html
@@ -34,6 +34,7 @@
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                     <li><a href="#">Dashboard</a></li>
                     <li><a href="../patient-profile/">Patient Profile</a></li>
+                    <li><a href="../change/">Change Password</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#">Logout</a></li>
                   </ul>
@@ -67,7 +68,7 @@
                     <div class="dimg"><img src="../../../images/logo.png" alt="Logo" /></div>
                    </a></li> 
                    
-                    <li class="dlifirst"><a href="../../../">Home</a></li>
+<!--                     <li class="dlifirst"><a href="../../../">Home</a></li>
                     <li><a href="../../../about/">About Us</a></li>
                     <li><a href="../../../services/">Our Services</a></li>
                     <li><a href="../../../specialization/">Specializations</a></li>
@@ -75,7 +76,7 @@
                     <li><a href="../../../contact/">Contact Us</a></li>
                     <li>
                         <input tabindex="1" type="text" name="name" class="text dsearch" Placeholder="Search">
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -93,13 +94,13 @@
                     <input type="text" name="location" placeholder="Search by Location.">
                </div>
                 <div class="col-md-12">  
-               <button>Search</button>
+               <a href="../../../search/"><button>Search</button></a>
                </div>
             </div>
         </div>
-    </section>
+    </section> 
 
-    <section class="patient-db">
+<!--     <section class="patient-db">
         <div class="container-fluid">
             <div class="row">
                <div class="col-md-12">
@@ -111,7 +112,7 @@
 
    
 
-
+ -->
 
     <!--    Footer-->
 
