--- a/dantalaya/user-profiles/patient/patient-profile/index.html
+++ b/dantalaya/user-profiles/patient/patient-profile/index.html
@@ -5,45 +5,37 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Patient Profile | Dantalaya</title>
-
     <link href="../../../css/bootstrap.min.css" rel="stylesheet">
     <link href="../../../css/style.css" rel="stylesheet">
     <link href="../../../css/font-awesome.min.css" rel="stylesheet">
-
     <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-
 </head>
 
 <body>
-
     <section>
         <div class="container-fluid dtop">
             <div class="row">
                 <div class="col-md-8 drightt">
                     <p class="dtopaddr">+91 99417 61544 - info@dantalaya.com</p>
                 </div>
-
                 <div class="col-md-4">
-                <div class="dropdown">
-                  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    Praveen Juge
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="../patient-profile/">Patient Profile</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Logout</a></li>
-                  </ul>
-                </div>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Praveen Juge
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="../dashboard/">Dashboard</a></li>
+                            <li><a href="#">Patient Profile</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Logout</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
-
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -59,14 +51,13 @@
                     </div>
                 </a>
             </div>
-
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav dnav">
-                   <li class="dlogo">
-                   <a class="navbar-brand" href="../../../">
-                    <div class="dimg"><img src="../../../images/logo.png" alt="Logo" /></div>
-                   </a></li> 
-                   
+                    <li class="dlogo">
+                        <a class="navbar-brand" href="../../../">
+                            <div class="dimg"><img src="../../../images/logo.png" alt="Logo" /></div>
+                        </a>
+                    </li>
                     <li class="dlifirst"><a href="../../../">Home</a></li>
                     <li><a href="../../../about/">About Us</a></li>
                     <li><a href="../../../services/">Our Services</a></li>
@@ -80,49 +71,144 @@
             </div>
         </div>
     </nav>
-
-
-
-
-    <section class="search-doctor">
-        <div class="container-fluid">
-            <div class="row">
-               <div class="col-md-12">
-                    <h1>Search for Doctors</h1>
-                    <input type="text" name="special" placeholder="Search by speciality.">
-                    <input type="text" name="location" placeholder="Search by Location.">
-               </div>
-                <div class="col-md-12">  
-               <button>Search</button>
-               </div>
-            </div>
-        </div>
-    </section>
-
     <section class="patient-db">
         <div class="container-fluid">
             <div class="row">
-               <div class="col-md-12">
-                <p>Patient Profile</p>
-               </div>
+                <div class="col-md-12">
+                    <p>Patient Profile</p>
+                </div>
             </div>
         </div>
     </section>
-
-   
-
-
-
+    <section id="dpreg">
+        <div class="container-fluid">
+            <div class="dreggrid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <form action="" method="post" id="contactForm" name="contactForm">
+                            <fieldset>
+                                <div class="row">
+                                    <div class="col-md-6 dregpad">
+                                        <div>
+                                            <label for="contactName">First Name <span class="required">*</span></label>
+                                            <input type="text" value="" size="35" id="contactName" name="contactName" placeholder="sriram" value="Sriram">
+                                        </div>
+                                        <div>
+                                            <label for="gender">Gender <span class="required">*</span></label>
+                                            <select class="form-control" id="gender" name="gender">
+                                                <option>Male</option>
+                                                <option>Female</option>
+                                                <option>Other</option>
+                                            </select>
+                                        </div>
+                                        <div>
+                                            <label for="aadhaar">Aadhaar number </label>
+                                            <input type="text" value="" size="35" id="aadhaar" name="aadhaar">
+                                        </div>
+                                        <div>
+                                            <label for="residential">Residential Address<span class="required">*</span></label>
+                                            <textarea cols="40" rows="6" id="residential" name="residential"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div>
+                                            <label for="lastName">Last Name <span class="required">*</span></label>
+                                            <input type="text" value="" size="35" id="lastName" name="lastName">
+                                        </div>
+                                        <div>
+                                            <label for="date">Date of Birth <span class="required">*</span></label>
+                                            <input type="date" value="" size="35" id="date" name="date">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6 dregpad">
+                                        <div>
+                                            <label for="City">City <span class="required">*</span></label>
+                                            <input type="text" value="" size="35" id="City" name="City">
+                                        </div>
+                                        <div>
+                                            <label for="pin">Pin <span class="required">*</span></label>
+                                            <input type="number" value="" size="35" id="pin" name="pin">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div>
+                                            <label for="state">State <span class="required">*</span></label>
+                                            <select class="form-control" id="state" name="state">
+                                                <option value="">Andhra Pradesh</option>
+                                                <option value="">Arunachal Pradesh</option>
+                                                <option value="">Assam</option>
+                                                <option value="">Bihar</option>
+                                                <option value="">Chhattisgarh</option>
+                                                <option value="">New Delhi</option>
+                                                <option value="">Goa</option>
+                                                <option value="">Gujarat</option>
+                                                <option value="">Haryana</option>
+                                                <option value="">Himachal Pradesh</option>
+                                                <option value="">Jammu and Kashmir</option>
+                                                <option value="">Jharkhand</option>
+                                                <option value="">Karnataka</option>
+                                                <option value="">Kerala</option>
+                                                <option value="">Madhya Pradesh</option>
+                                                <option value="">Maharashtra</option>
+                                                <option value="">Manipur</option>
+                                                <option value="">Meghalaya</option>
+                                                <option value="">Mizoram</option>
+                                                <option value="">Nagaland</option>
+                                                <option value="">Puducherry</option>
+                                                <option value="">Punjab</option>
+                                                <option value="">Rajasthan</option>
+                                                <option value="">Sikkim</option>
+                                                <option value="">Tamil Nadu</option>
+                                                <option value="">Telangana</option>
+                                                <option value="">Tripura</option>
+                                                <option value="">Uttar Pradesh</option>
+                                                <option value="">Uttarakhand</option>
+                                                <option value="">West Bengal</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6 dregpad">
+                                        <div>
+                                            <label for="mobile">Mobile <span class="required">*</span></label>
+                                            <input type="text" value="" size="35" id="mobile" name="mobile">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div>
+                                            <label for="mobile">Email <span class="required">*</span></label>
+                                            <input type="text" value="" size="35" id="email" name="email">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row dsub">
+                                    <div class="col-md-12">
+                                        <div class="dgal">
+                                            <div class="col-md-12" style="display: flex; justify-content: center;">
+                                                <a href="#">
+                                                    <div class="btn dbtn pull-left">Save Changes</div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--    Footer-->
-
     <footer>
         <div class="container-fluid ">
             <div class="row dfoot dpad">
                 <div class="col-md-8 dquick">
                     <h3>quick links</h3>
-
                     <div class="row">
-
                         <div class="col-md-4">
                             <ul class="dqli">
                                 <li><a href="../../../">Home</a></li>
@@ -132,7 +218,6 @@
                                 <li><a href="../../../contact/">Contact Us</a></li>
                             </ul>
                         </div>
-
                         <div class="col-md-4">
                             <ul class="dqli">
                                 <li><a href="#">Sitemap</a></li>
@@ -142,7 +227,6 @@
                                 <li><a href="#">Privacy Policy</a></li>
                             </ul>
                         </div>
-
                         <div class="col-md-4 dprac">
                             <p>Phone: +91 9941761544</p>
                             <p class="dindent">+91 9941761544</p>
@@ -151,7 +235,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4 dlast">
                     <h1>Dantalaya</h1>
                     <hr class="dfothr">
@@ -160,11 +243,11 @@
                     <p>#38/48, I floor, Bazar Street</p>
                     <p>Neelasandra, Bangalore-560047 </p>
                     <p>
-                     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                     <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></i></a>
-                     <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></i></a>
-                     <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></i></a> 
-                </p>
+                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></i></a>
+                        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></i></a>
+                        <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></i></a>
+                    </p>
                 </div>
             </div>
             <div class="row dcopy">
@@ -174,12 +257,8 @@
             </div>
         </div>
     </footer>
-
-
-
     <script src="../../../js/jquery.min.js"></script>
     <script src="../../../js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
