--- a/dantalaya/index.html
+++ b/dantalaya/index.html
@@ -5,19 +5,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Welcome to Dantalaya</title>
-
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-
     <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-
 </head>
 
 <body>
-
     <section>
         <div class="container-fluid dtop">
             <div class="row">
@@ -25,7 +20,6 @@
                     <p class="dtopaddr">+91 99417 61544 &nbsp; - &nbsp; info@dantalaya.com
                     </p>
                 </div>
-
                 <div class="col-md-4">
                     <a href="#login">
                         <div class="btn dbtn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</div>
@@ -37,8 +31,6 @@
             </div>
         </div>
     </section>
-
-
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -54,7 +46,6 @@
                     </div>
                 </a>
             </div>
-
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav dnav">
                     <li class="dlogo">
@@ -75,13 +66,8 @@
             </div>
         </div>
     </nav>
-
-
-
     <section>
-
         <div id="owl-demo" class="owl-carousel owl-theme">
-
             <div class="item">
                 <h1>Your Health<br />OUR FIRST PRIORITY</h1>
                 <p>We serve better than any other.</p>
@@ -95,35 +81,20 @@
             <div class="item"><img src="images/1.jpg" alt="4"></div>
             <div class="item"><img src="images/2.jpg" alt="5"></div>
             <div class="item"><img src="images/3.jpg" alt="6"></div>
-
         </div>
     </section>
-
-
-
     <section>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-7 dwel">
-
                     <h1>WELCOME TO <b>DANTALAYA</b></h1>
                     <p>
                         The <b>world's largest network of Dental Practitioners!</b> For the <b>first time</b> in India, Dental Surgeons will come together to address the nation's Dental problems.</p>
                     <p>
-                        Dantalaya offers a plethora of services so that no one <b>postpones or ignores</b> Dental treatment! All services at the click of a button!  </p>
-                        <li><b>Locate</b> a Dentist close to your <b>home/office.</b></li>
-                        <li>Fix Dental <b>appointments</b> at <b>your convenience!</b></li>
-                        <li>Treatment provided <b>anywhere in India!</b></li>
-                        <li>Avail complete <b>Oral assessment</b> in the <b>first</b> appointment!</li>
-                        <li>Treatment <b>prices</b> made very <b>affordable!</b></li>
-                        <li>Uniform prices throughout the country!</li>
-                        <li>Flexible payment options: <b>credit/debit card, online transfer, cheques, EMI facility.</b> </li>
-                        <li>Treatment for <b>Foreigners and NRIs</b> at very affordable prices!</li>
-                        <li>Unique packages for children and the <b>elderly!</b></li></br>
+                        Dantalaya offers a plethora of services so that no one <b>postpones or ignores</b> Dental treatment! All services at the click of a button! </p>
                     <p>
-                         DANTALAYA AIMS TO PROVIDE TREATMENT TO EVERY INDIVIDUAL IN THE COUNTRY WITHOUT WORRYING ABOUT THE COSTS! </p>
-
-<!--
+                        DANTALAYA AIMS TO PROVIDE TREATMENT TO EVERY INDIVIDUAL IN THE COUNTRY WITHOUT WORRYING ABOUT THE COSTS! </p>
+                    <!--
 
                     <p>
                         Dantalaya has something for everyone: For oral-Health friendly Treatments, To Find a Dentist in Nearby Location, Treatment at Affordable price With EMI options, Review oral Health history . Dantalaya now to brush up on your oral Health and prepared to meet Dental Practitioners from various specialties with lots of experience in clinical practice!
@@ -133,67 +104,90 @@
                         <div class="btn dbtn dbtn1">Learn More</div>
                     </a>
                 </div>
-
-
                 <div id="login" class="col-md-5 dbox">
-
                     <form class="dform">
-
                         <div class="dlog">Login To Your Account</div>
-
                         <li class="input-field">
                             <input placeholder="Username" id="Username" type="text " class="validate dlogin">
                         </li>
                         <li class="input-field">
                             <input placeholder="Password" id="password" type="password" class="validate dlogin">
                         </li>
-
                         <div class="drem">
                             <label class="check">
                                 <input type="checkbox"><span class="lever"></span>Remember Me</label>
                         </div>
-
-
                         <!--<div class="submit"><input type="submit" onclick="" value="Sign In" ></div>-->
                         <div class="dsubm">
                             <button class="btn dbtn dbtn2" type="submit" name="action">Sign in</button>
                         </div>
-
                         <div class="box">
                             <hr class="dloghr">
                         </div>
                         <div class="dfor">
                             <a href="#">Forgot Password?</a></div>
                     </form>
-
-
-                    <div class="dbox dform">
+<!--                     <div class="dbox dform">
                         <a href="register/">
                             <div class="btn dbtn dbtn2">Click here to Register</div>
                         </a>
-                    </div>
-
+                    </div> -->
                 </div>
-
-
-
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="block1">
+                        <i class="fa fa-male" aria-hidden="true"></i>
+                        <h3>General Public</h3>
+                        <p>Locate a dentist close to your home/office by</p>
+                        <a href="register/">
+                            <div class="btn dbtn dbtn2">Registering here</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="block1">
+                        <i class="fa fa-user-md" aria-hidden="true"></i>
+                        <h3>Dentist</h3>
+                        <p>Join hand with Dantalaya to serve patients by</p>
+                        <a href="register/">
+                            <div class="btn dbtn dbtn2">Registering here</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="block1">
+                        <i class="fa fa-ambulance" aria-hidden="true"></i>
+                        <h3>House Surgeon</h3>
+                        <p>Learn the art of dentistry from the senior doctors by</p>
+                        <a href="register/">
+                            <div class="btn dbtn dbtn2">Registering here</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="block1">
+                    <i class="fa fa-flask" aria-hidden="true"></i>
+                        <h3>Dental Lab / Technician</h3>
+                        <p>Recieve orders daily &amp; meet doctors at your own time by</p>
+                        <a href="register/">
+                            <div class="btn dbtn dbtn2">Registering here</div>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
 
     </section>
-
-
-
     <!--    Footer-->
-
     <footer>
         <div class="container-fluid ">
             <div class="row dfoot dpad">
                 <div class="col-md-8 dquick">
                     <h3>quick links</h3>
-
                     <div class="row">
-
                         <div class="col-md-4">
                             <ul class="dqli">
                                 <li><a href="#">Home</a></li>
@@ -203,7 +197,6 @@
                                 <li><a href="contact/">Contact Us</a></li>
                             </ul>
                         </div>
-
                         <div class="col-md-4">
                             <ul class="dqli">
                                 <li><a href="#">Sitemap</a></li>
@@ -213,7 +206,6 @@
                                 <li><a href="#">Privacy Policy</a></li>
                             </ul>
                         </div>
-
                         <div class="col-md-4 dprac">
                             <p>Phone: +91 9941761544</p>
                             <p class="dindent">+91 9941761544</p>
@@ -222,7 +214,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4 dlast">
                     <h1>Dantalaya</h1>
                     <hr class="dfothr">
@@ -245,27 +236,25 @@
             </div>
         </div>
     </footer>
-
-
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/flickity.pkgd.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script>
-        $(document).ready(function () {
+    $(document).ready(function() {
 
-            $("#owl-demo").owlCarousel({
+        $("#owl-demo").owlCarousel({
 
-                slideSpeed: 300,
-                paginationSpeed: 400,
-                singleItem: true,
-                autoPlay: 2000,
-                stopOnHover: true
+            slideSpeed: 300,
+            paginationSpeed: 400,
+            singleItem: true,
+            autoPlay: 2000,
+            stopOnHover: true
 
-
-            });
 
         });
+
+    });
     </script>
 </body>
 
