--- a/dantalaya/services/labtechnician/index.html
+++ b/dantalaya/services/labtechnician/index.html
@@ -100,7 +100,7 @@
     </ul>
   </p>   
                
-               <a href="../technicianregister/"><div class="btn btn-block dbtn dbtn1">Register as a lab technician now</div></a>
+               <a href="../../technicianregister/"><div class="btn btn-block dbtn dbtn1">Register as a lab technician now</div></a>
                 </div>
             </div>
         </div>
