--- a/dantalaya/index.html
+++ b/dantalaya/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="block1">
-                        <i class="fa fa-ambulance" aria-hidden="true"></i>
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                         <h3>House Surgeon</h3>
                         <p>Learn the art of dentistry from the senior doctors by</p>
                         <a href="register/">
