--- a/dantalaya/index.html
+++ b/dantalaya/index.html
@@ -142,7 +142,7 @@
                         <i class="fa fa-male" aria-hidden="true"></i>
                         <h3>General Public</h3>
                         <p>Locate a dentist close to your home/office by</p>
-                        <a href="register/">
+                        <a href="patientregister/">
                             <div class="btn dbtn dbtn2">Registering here</div>
                         </a>
                     </div>
@@ -152,7 +152,7 @@
                         <i class="fa fa-user-md" aria-hidden="true"></i>
                         <h3>Dentist</h3>
                         <p>Join hand with Dantalaya to serve patients by</p>
-                        <a href="register/">
+                        <a href="doctorregister/">
                             <div class="btn dbtn dbtn2">Registering here</div>
                         </a>
                     </div>
@@ -162,7 +162,7 @@
                         <i class="fa fa-plus" aria-hidden="true"></i>
                         <h3>House Surgeon</h3>
                         <p>Learn the art of dentistry from the senior doctors by</p>
-                        <a href="register/">
+                        <a href="surgeonregister/">
                             <div class="btn dbtn dbtn2">Registering here</div>
                         </a>
                     </div>
@@ -172,7 +172,7 @@
                     <i class="fa fa-flask" aria-hidden="true"></i>
                         <h3>Dental Lab / Technician</h3>
                         <p>Recieve orders daily &amp; meet doctors at your own time by</p>
-                        <a href="register/">
+                        <a href="technicianregister/">
                             <div class="btn dbtn dbtn2">Registering here</div>
                         </a>
                     </div>
