--- a/dantalaya/patientregister/index.html
+++ b/dantalaya/patientregister/index.html
@@ -78,7 +78,7 @@
             <div class="row">
                 <div class="col-md-12">
                   
-                  <p class="dserhead">Patient Registration Form</p>
+                  <p class="dserhead">General Public Registration Form</p>
                   
                       <div class="container dreggrid">
               <div class="row">
