--- a/dantalaya/specialization/index.html
+++ b/dantalaya/specialization/index.html
@@ -106,7 +106,7 @@
                     <h2>CROWN &amp; BRIDGES</h2>
 
                     <p class="dabtpad">
-                        When a tooth is heavily decayed it is more likely to fracture and lose considerable tooth substance. Crowns, also known as caps, restore damaged teeth and mimic the shape, size and color of the surrounding teeth. Crowns are indicated for cracked teeth and teeth with deep cavities to protect teeth that have been filled by root-canal treatment to provide extra support for bridges and to cover poorly shaped or discolored teeth. Crowns may be made of metal, porcelain, or newer restorative materials like metal free ceramics. They are custom-made and fitted for each patient in conformation with the size and length of the natural teeth.
+                        When a tooth is heavily decayed it is more likely to fracture and lose considerable tooth substance. Crowns, also known as caps, restore damaged teeth and mimic the shape, size and colour of the surrounding teeth. Crowns are indicated for cracked teeth and teeth with deep cavities to protect teeth that have been filled by root-canal treatment to provide extra support for bridges and to cover poorly shaped or discoloured teeth. Crowns may be made of metal, porcelain, or newer restorative materials like metal free ceramics. They are custom-made and fitted for each patient in conformation with the size and length of the natural teeth.
 
                     </p>
 
@@ -190,7 +190,7 @@
             <div class="row">
                 <div class="col-md-6 dabt1">
 
-                    <h2>TOOTH JEWELLERY</h2>
+                    <h2>DENTAL JEWELLERY</h2>
 
                     <p class="dabtpad">
                         Tooth Jewellery is a brilliant way to add sparkles to your smile and stand out of the crowd. Tooth jewellery is the latest thing in cosmetic dentistry – and it’s popular with people of all ages. Surprise your friends with a sparkling crystal glass design, or something in gold with a twinkle of ruby or diamond. These tiny little designs are great fun, and because there’s no drilling involved, they won’t harm your teeth.
