--- a/dantalaya/user-profiles/surgeon/surgeon-profile/index.html
+++ b/dantalaya/user-profiles/surgeon/surgeon-profile/index.html
@@ -27,7 +27,7 @@
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="../surgeon-profile/">Surgeon Profile</a></li>
-                            <li><a href="../changepassword/">Change Password</a></li>
+                            <li><a href="../change/">Change Password</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Logout</a></li>
                         </ul>
