--- a/dantalaya/services/patient/index.html
+++ b/dantalaya/services/patient/index.html
@@ -77,9 +77,6 @@
             <div class="row">
                 <div class="col-md-12 dabt">
                     <p class="dserhead">Patients</p>
-                    <div class="row">
-                        <img src="../../images/234.png" alt="services">
-                    </div>
                     <div class="dserpad">
                         <div style="float:right; width:40%; ">
                             <br/>
@@ -108,7 +105,7 @@
                         <h2>DANTALAYA has a solution for everything.</h2></center>
                     <ul>
                         <li>Meet <b>experienced</b> Dental Practitioners for the entire family at the click of a button!</li>
-                        <li> Be it a :Root Canal Procedure, Irregular Teeth, Wisdom Teeth Extraction, Fixed and Removable Dentures, Braces For Children And Adults, Dental Implants, Scaling/Teeth Whitening, Dental Cosmetics, Gum Surgeries</li>
+                        <li> Be it a :Root canal procedure,Irregular teeth,Wisdom teeth extraction,Fixed and removable dentures,Braces for children and adults,Dental implants,Scaling/ teeth whitening,Dental cosmetics,Gum surgeries</li>
                         <li><b>All treatments under one roof! </b></li>
                     </ul>
                 </div>
@@ -118,7 +115,7 @@
                         <h2> TREATMENT FIRST PAYMENT LATER </h2></center>
                     <ul>
                         <li> Dantalaya introduces <b>EMI options for the first in India! </b></li>
-                        <li>Payment methods: credit/debit card, online transfer, cheque and EMI options made easy so that you don't postpone your treatment! </li>
+                        <li>Payment methods: credit/debit card, online transfer, cheques and EMI options made easy so that you don't postpone your treatment! </li>
                         <li>Contact your Doctor for more information about PAYMENTS! </li>
                     </ul>
                 </div>
