--- a/dantalaya/user-profiles/patient/dashboard/index.html
+++ b/dantalaya/user-profiles/patient/dashboard/index.html
@@ -32,9 +32,9 @@
                     <span class="caret"></span>
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="../dashboard/">Dashboard</a></li>
+                    <li><a href="#">Dashboard</a></li>
                     <li><a href="../patient-profile/">Patient Profile</a></li>
-                    <li><a href="../changepassword/">Change Password</a></li>
+                    <li><a href="../change/">Change Password</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#">Logout</a></li>
                   </ul>
